tests/NormalTests/paczka1/small_fuzzy/58088051.err
Error in line 4: HITmRqCcnR S873 137,5
Error in line 1: OULFRFv S296 78,7
